--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         .main {
             background-color: white;
-            margin: 0 auto;
+            margin: 0 5px;
             padding-bottom: 50px;
             width: 100%;
             max-width: 600px;
