--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
 
         .main {
             background-color: white;
-            margin: 0 5px;
+            margin: 0 auto;
             padding-bottom: 50px;
             width: 100%;
             max-width: 600px;
+            padding-left: 5px;
+            padding-right: 5px;
             border-spacing: 0;
             font-family: sans-serif;
             color: #353535; 
